# string.h

./: CMakeLists.txt
src/: Makefile  s21_insert.c  s21_memchr.c  s21_memcmp.c  s21_memcpy.c  s21_memmove.c  s21_memset.c  s21_sprintf.c  s21_strcat.c  s21_strchr.c  s21_strcmp.c  s21_strcpy.c  s21_strcspn.c  s21_strerror.c  s21_string.h  s21_strlen.c  s21_strncat.c  s21_strncmp.c  s21_strncpy.c  s21_strpbrk.c  s21_strrchr.c  s21_strspn.c  s21_strstr.c  s21_strtok.c  s21_to_lower.c  s21_to_upper.c  s21_trim.c
src/unit_tests/: test_main.c  test_s21_insert.c  test_s21_memchr.c  test_s21_memcmp.c  test_s21_memcpy.c  test_s21_memmove.c  test_s21_memset.c  test_s21_sprintf.c  test_s21_strcat.c  test_s21_strchr.c  test_s21_strcmp.c  test_s21_strcpy.c  test_s21_strcspn.c  test_s21_strerror.c  test_s21_strlen.c  test_s21_strncat.c  test_s21_strncmp.c  test_s21_strncpy.c  test_s21_strpbrk.c  test_s21_strrchr.c  test_s21_strspn.c  test_s21_strstr.c  test_s21_strtok.c  test_s21_to_lower.c  test_s21_to_upper.c  test_s21_trim.c  unit_tests.h
