cmake_minimum_required(VERSION 3.23)
project(string_h)

set(CMAKE_CXX_STANDARD 14)

include_directories(src)
include_directories(src/unit_tests)

add_executable(string_h
        data-samples/data.txt
        materials/build/scripts/build.py
        materials/build/scripts/build.sh
        materials/build/scripts/style_tests.py
        materials/build/scripts/style_tests.sh
        materials/build/scripts/test.sh
        materials/build/Dockerfile
        materials/build/readme.txt
        materials/build/run.sh
        "materials/7 principles of structural programming.md"
        materials/from_developers.txt
        materials/from_developers_rus.txt
        materials/instructions_for_testing.md
        materials/instructions_for_testing_rus.md
        misc/eng/images/s21_stringplus.png
        misc/rus/images/s21_stringplus.png
        src/unit_tests/test_main.c
        src/unit_tests/test_s21_insert.c
        src/unit_tests/test_s21_memchr.c
        src/unit_tests/test_s21_memcmp.c
        src/unit_tests/test_s21_memcpy.c
        src/unit_tests/test_s21_memmove.c
        src/unit_tests/test_s21_memset.c
        src/unit_tests/test_s21_sprintf.c
        src/unit_tests/test_s21_strcat.c
        src/unit_tests/test_s21_strchr.c
        src/unit_tests/test_s21_strcmp.c
        src/unit_tests/test_s21_strcpy.c
        src/unit_tests/test_s21_strcspn.c
        src/unit_tests/test_s21_strerror.c
        src/unit_tests/test_s21_strlen.c
        src/unit_tests/test_s21_strncat.c
        src/unit_tests/test_s21_strncmp.c
        src/unit_tests/test_s21_strncpy.c
        src/unit_tests/test_s21_strpbrk.c
        src/unit_tests/test_s21_strrchr.c
        src/unit_tests/test_s21_strspn.c
        src/unit_tests/test_s21_strstr.c
        src/unit_tests/test_s21_strtok.c
        src/unit_tests/test_s21_to_lower.c
        src/unit_tests/test_s21_to_upper.c
        src/unit_tests/test_s21_trim.c
        src/unit_tests/unit_tests.h
        src/s21_insert.c
        src/s21_memchr.c
        src/s21_memcmp.c
        src/s21_memcpy.c
        src/s21_memmove.c
        src/s21_memset.c
        src/s21_sprintf.c
        src/s21_strcat.c
        src/s21_strchr.c
        src/s21_strcmp.c
        src/s21_strcpy.c
        src/s21_strcspn.c
        src/s21_strerror.c
        src/s21_string.h
        src/s21_strlen.c
        src/s21_strncat.c
        src/s21_strncmp.c
        src/s21_strncpy.c
        src/s21_strpbrk.c
        src/s21_strrchr.c
        src/s21_strspn.c
        src/s21_strstr.c
        src/s21_strtok.c
        src/s21_to_lower.c
        src/s21_to_upper.c
        src/s21_trim.c
        CHANGELOG
        LICENSE)
